# audiomodel

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  data.rs  io.rs  lib.rs  mask.rs  metric.rs  mine.rs  model.rs  ops.rs  pad.rs  task.rs  train.rs  util.rs  valid.rs
src/config/: small_music.rs  wav2vec2.rs
src/data/: music_genres.rs
src/mask/: block.rs
src/metric/: code_perplexity.rs  contrastive_loss.rs  correct.rs  diversity_loss.rs  gradnorm.rs  maskingratio.rs  perplexity.rs  temperature.rs
src/model/: arch.rs  encoder.rs  extractor.rs  posconv.rs  posenc.rs  pretrain.rs  projection.rs  quantizer.rs
src/model/arch/: encoder.rs  extractor.rs  posenc.rs  quantizer.rs
src/model/arch/encoder/: burn_transformer.rs  transformer.rs
src/model/arch/posenc/: convpos.rs  rope.rs
src/model/arch/quantizer/: gumbel.rs
src/model/encoder/: burn_transformer.rs  linear.rs  transformer.rs
src/model/posenc/: convpos.rs  rope.rs
src/model/quantizer/: gumbel.rs
src/task/: classify.rs  pretrain.rs
